update html and picture

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Massively by HTML5 UP</title>
+	<title>Crypto Airdrop</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<meta name="description"
@@ -39,18 +39,18 @@
 
 		<!-- Header -->
 		<header id="header">
-			<a href="index.html" class="logo">Massively</a>
+			<a href="index.html" class="logo">Introduce</a>
 		</header>
 
 		<!-- Nav -->
 		<nav id="nav">
 			<ul class="links">
 				<li class="active"><a href="index.html">Crypto Airdrop</a></li>
-				<li><a href="generic.html">Generic Page</a></li>
-				<li><a href="elements.html">Elements Reference</a></li>
+				<!-- <li><a href="generic.html">Generic Page</a></li>
+				<li><a href="elements.html">Elements Reference</a></li> -->
 			</ul>
 			<ul class="icons">
-				<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+				<li><a href="https://x.com/tigerdev68" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 				<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 				<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 				<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
@@ -92,7 +92,8 @@
 		<!-- Footer -->
 		<footer id="footer">
 			<section>
-				<form method="post" action="#">
+				<h3>Airdrop cùng Jason</h3>
+				<!-- <form method="post" action="#">
 					<div class="fields">
 						<div class="field">
 							<label for="name">Name</label>
@@ -110,10 +111,10 @@
 					<ul class="actions">
 						<li><input type="submit" value="Send Message" /></li>
 					</ul>
-				</form>
+				</form> -->
 			</section>
 			<section class="split contact">
-				<section class="alt">
+				<!-- <section class="alt">
 					<h3>Address</h3>
 					<p>1234 Somewhere Road #87257<br />
 						Nashville, TN 00000-0000</p>
@@ -125,7 +126,7 @@
 				<section>
 					<h3>Email</h3>
 					<p><a href="#">info@untitled.tld</a></p>
-				</section>
+				</section> -->
 				<section>
 					<h3>Social</h3>
 					<ul class="icons alt">
@@ -163,26 +164,26 @@
 		const projectList = [
 			{
 				id: 1,
-				title: "Airdrop Dự án LayerZero",
+				title: "Airdrop Dự án Boundless",
 				date: "April 27, 2025",
-				image: "images/pic02.jpg",
-				shortDesc: "Dự án LayerZero đang tổ chức Airdrop với tổng cộng 5 triệu token ZRO cho cộng đồng. Tham gia ngay để nhận phần thưởng!",
+				image: "images/boundless/boundless.jpg",
+				shortDesc: "Tham gia ngay dự án airdrop Boundless cùng Jason nhé!",
 				detailsUrl: "project-details.html?id=1"
 			},
 			{
 				id: 2,
-				title: "Airdrop Dự án zkSync",
+				title: "Airdrop Dự án Recall",
 				date: "April 26, 2025",
-				image: "images/pic03.jpg",
-				shortDesc: "zkSync phân phối token ZK miễn phí cho người dùng sớm. Hoàn thành các nhiệm vụ để nhận thưởng trước khi kết thúc!",
+				image: "images/recall/RECALL.png",
+				shortDesc: "Tham gia ngay dự án airdrop Recall cùng Jason nhé!",
 				detailsUrl: "project-details.html?id=2"
 			},
 			{
 				id: 3,
-				title: "Airdrop Dự án StarkNet",
+				title: "Airdrop Dự án Billions",
 				date: "April 25, 2025",
-				image: "images/pic04.jpg",
-				shortDesc: "StarkNet thưởng token STRK cho người dùng tham gia testnet. Đừng bỏ lỡ cơ hội nhận thưởng!",
+				image: "images/billions/billions.png",
+				shortDesc: "Tham gia ngay dự án airdrop Billions cùng Jason nhé!",
 				detailsUrl: "project-details.html?id=3"
 			},
 			{
@@ -216,6 +217,14 @@
 				image: "images/pic07.jpg",
 				shortDesc: "Aptos phân phối token APT miễn phí cho cộng đồng tham gia staking.",
 				detailsUrl: "project-details.html?id=7"
+			},
+			{
+				id: 8,
+				title: "Airdrop Dự án Aptos",
+				date: "April 21, 2025",
+				image: "images/pic07.jpg",
+				shortDesc: "Aptos phân phối token APT miễn phí cho cộng đồng tham gia staking.",
+				detailsUrl: "project-details.html?id=7"
 			}
 		];
 
@@ -232,8 +241,8 @@
 				? filteredProjects.map(project => `
                         <div class="slide">
                             <header class="major">
-                                <span class="date">${project.date}</span>
                                 <h2><a href="${project.detailsUrl}">${project.title.replace('Airdrop Dự án ', 'Airdrop ')}<br />Đừng Bỏ Lỡ!</a></h2>
+								<span class="date">${project.date}</span>
                                 <p>${project.shortDesc}</p>
                             </header>
                             <a href="${project.detailsUrl}" class="image main"><img src="${project.image}" alt="${project.title}" /></a>
