--- a/project-details.html
+++ b/project-details.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <meta name="description"
-        content="Chi tiết Airdrop các dự án Crypto như LayerZero, zkSync, StarkNet. Nhận token miễn phí an toàn!" />
-    <meta name="keywords" content="Crypto Airdrop, LayerZero, zkSync, StarkNet, token miễn phí" />
+        content="Chi tiết Airdrop các dự án Crypto như Recall, Boundless, Billions. Nhận token miễn phí an toàn!" />
+    <meta name="keywords" content="Crypto Airdrop, Recall, Boundless, Billions, token miễn phí" />
     <link rel="stylesheet" href="assets/css/main.css" />
     <noscript>
         <link rel="stylesheet" href="assets/css/noscript.css" />
@@ -26,11 +26,11 @@
         <nav id="nav">
             <ul class="links">
                 <li><a href="index.html">Crypto Airdrop</a></li>
-                <li><a href="generic.html">Generic Page</a></li>
-                <li><a href="elements.html">Elements Reference</a></li>
+                <!-- <li><a href="generic.html">Generic Page</a></li>
+                <li><a href="elements.html">Elements Reference</a></li> -->
             </ul>
             <ul class="icons">
-                <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+                <li><a href="https://x.com/tigerdev68" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
                 <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
                 <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
                 <li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
@@ -51,7 +51,7 @@
                 <h2>Hướng dẫn tham gia</h2>
                 <ol id="projectInstructions"></ol>
                 <ul class="actions special">
-                    <li><a id="joinLink" href="#" class="button large">Tham gia ngay</a></li>
+                    <li><a id="joinLink" href="#" class="button large">Tìm hiểu thêm</a></li>
                 </ul>
             </article>
         </div>
@@ -59,7 +59,8 @@
         <!-- Footer -->
         <footer id="footer">
             <section>
-                <form method="post" action="#">
+                <h3>Airdrop cùng Jason</h3>
+                <!-- <form method="post" action="#">
                     <div class="fields">
                         <div class="field">
                             <label for="name">Name</label>
@@ -77,10 +78,10 @@
                     <ul class="actions">
                         <li><input type="submit" value="Send Message" /></li>
                     </ul>
-                </form>
+                </form> -->
             </section>
             <section class="split contact">
-                <section class="alt">
+                <!-- <section class="alt">
                     <h3>Address</h3>
                     <p>1234 Somewhere Road #87257<br />
                         Nashville, TN 00000-0000</p>
@@ -92,7 +93,7 @@
                 <section>
                     <h3>Email</h3>
                     <p><a href="#">info@untitled.tld</a></p>
-                </section>
+                </section> -->
                 <section>
                     <h3>Social</h3>
                     <ul class="icons alt">
@@ -111,7 +112,8 @@
         <div id="copyright">
             <ul>
                 <li>© Untitled</li>
-                <li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+                <!-- <li>Design: <a href="https://html5up.net">HTML5 UP</a></li> -->
+                <li>Design: jason</li>
             </ul>
         </div>
     </div>
@@ -128,65 +130,67 @@
         // Dữ liệu dự án
         const projects = {
             1: {
-                title: "Airdrop Dự án LayerZero",
+                title: "Airdrop Dự án Boundless",
                 date: "April 27, 2025",
-                image: "images/pic01.jpg",
-                shortDesc: "Dự án LayerZero đang tổ chức Airdrop với tổng cộng 5 triệu token ZRO cho cộng đồng.",
+                image: "images/boundless/boundless.jpg",
+                shortDesc: "Tham gia ngay dự án airdrop Boundless cùng Jason nhé!",
                 details: `
                         <ul>
-                            <li><strong>Thời gian:</strong> 25/04/2025 - 05/05/2025</li>
-                            <li><strong>Yêu cầu:</strong> Kết nối ví MetaMask, tham gia Discord, follow Twitter</li>
-                            <li><strong>Phần thưởng:</strong> 50 ZRO Token mỗi người</li>
-                            <li><strong>Link tham gia:</strong> <a href="https://layerzero.network/airdrop">layerzero.network/airdrop</a></li>
+                            <li><strong>Yêu cầu:</strong> Tham gia Discord, follow Twitter</li>
+                            <li><strong>Phần thưởng:</strong> Token dự án</li>
+                            <li><strong>Link tham gia:</strong> <a href="https://discord.com/invite/boundlessxyz">Discord boundless</a></li>
                         </ul>
                     `,
                 instructions: `
-                        <li>Truy cập website chính thức của LayerZero.</li>
-                        <li>Kết nối ví MetaMask và xác minh địa chỉ.</li>
-                        <li>Tham gia kênh Discord và follow Twitter của dự án.</li>
-                        <li>Điền form Airdrop trên website.</li>
+                        <li>Truy cập link discord của dự án <a href="https://discord.com/invite/boundlessxyz">Discord boundless</a></li>
+                        <li>Hiện tại dự án mới ra discord cho anh em cày role, có thông tin mới mình sẽ update sau</li>
+                        <ul>------Update------</ul>
                     `,
-                joinLink: "https://layerzero.network/airdrop"
+                joinLink: "https://docs.beboundless.xyz/developers/what"
             },
             2: {
-                title: "Airdrop Dự án zkSync",
+                title: "Airdrop Dự án Recall",
                 date: "April 26, 2025",
-                image: "images/pic02.jpg",
-                shortDesc: "zkSync phân phối token ZK miễn phí cho người dùng sớm.",
+                image: "images/recall/RECALL.png",
+                shortDesc: "Tham gia ngay dự án airdrop Recall cùng Jason nhé!",
                 details: `
                         <ul>
-                            <li><strong>Thời gian:</strong> 20/04/2025 - 30/04/2025</li>
-                            <li><strong>Yêu cầu:</strong> Thực hiện giao dịch trên zkSync Era, tham gia Telegram</li>
-                            <li><strong>Phần thưởng:</strong> 100 ZK Token mỗi người</li>
-                            <li><strong>Link tham gia:</strong> <a href="https://zksync.io/airdrop">zksync.io/airdrop</a></li>
+                            
+                            <li><strong>Yêu cầu:</strong> Tham gia Testnet, chiến dịch Galxe, Zealy, tham gia Discord, follow Twitter</li>
+                            <li><strong>Phần thưởng:</strong> Token dự án</li>
+                            <li><strong>Link tham gia:</strong> <a href="https://boost.absinthe.network/recall/account">boost.absinthe.network</a></li>
                         </ul>
                     `,
                 instructions: `
-                        <li>Truy cập zkSync Era và thực hiện ít nhất 1 giao dịch (swap, bridge, v.v.).</li>
-                        <li>Tham gia kênh Telegram của zkSync.</li>
-                        <li>Đăng ký Airdrop trên website chính thức.</li>
+                        <li>Truy cập <a href="https://boost.absinthe.network/recall/account">boost.absinthe.network</a>, nhập ref code: 36fe7ef1</li>
+                        <li>Hoàn thành các Quest Galxe, Zealy bên dưới</li>
+                        
+                        <li>Truy cập <a href="https://portal.recall.network/account">portal.recall.network</a>, kết nối ví.</li>
+                        <li>Faucet Token, mua Credit, tạo Bucket</li>
+                        <li>Truy cập Discord dự án cày role <a href="https://discord.com/invite/recallnet">Discord Recall</a>, (sẽ có các role chat theo Level, role contribute tốt,...) </li>
                     `,
-                joinLink: "https://zksync.io/airdrop"
+                joinLink: "https://recall.network/"
             },
             3: {
-                title: "Airdrop Dự án StarkNet",
+                title: "Airdrop Dự án Billions",
                 date: "April 25, 2025",
-                image: "images/pic03.jpg",
-                shortDesc: "StarkNet thưởng token STRK cho người dùng tham gia testnet.",
+                image: "images/billions/billions.png",
+                shortDesc: "Tham gia ngay dự án airdrop Billions cùng Jason nhé!",
                 details: `
                         <ul>
                             <li><strong>Thời gian:</strong> 15/04/2025 - 25/04/2025</li>
-                            <li><strong>Yêu cầu:</strong> Tham gia testnet, thực hiện giao dịch</li>
-                            <li><strong>Phần thưởng:</strong> 200 STRK Token mỗi người</li>
-                            <li><strong>Link tham gia:</strong> <a href="https://starknet.io/airdrop">starknet.io/airdrop</a></li>
+                            <li><strong>Yêu cầu:</strong> Tham gia nhiệm vụ kiếm Power, cày role Discord</li>
+                            <li><strong>Phần thưởng:</strong> Token dự án</li>
+                            <li><strong>Link tham gia:</strong> <a href="https://signup.billions.network?rc=WROJALHT">signup.billions.network</a></li>
                         </ul>
                     `,
                 instructions: `
-                        <li>Truy cập testnet của StarkNet.</li>
-                        <li>Thực hiện ít nhất 3 giao dịch trên testnet.</li>
-                        <li>Đăng ký nhận thưởng trên website chính thức.</li>
+                        <li>Truy cập <a href="https://signup.billions.network?rc=WROJALHT">signup.billions.network</a></li>
+                        <li>Hoàn thành các nhiệm vụ đơn giản</li>
+                        <li>Truy cập cày role Discord dự án <a href="https://discord.com/invite/billions-ntwk">Discord Billions</a> </li>
+                        <ul>------Update------</ul>
                     `,
-                joinLink: "https://starknet.io/airdrop"
+                joinLink: "https://signup.billions.network?rc=WROJALHT"
             },
             4: {
                 title: "Airdrop Dự án Arbitrum",
@@ -249,6 +253,26 @@
                 joinLink: "https://polygon.technology/zkevm-airdrop"
             },
             7: {
+                title: "Airdrop Dự án Aptos",
+                date: "April 21, 2025",
+                image: "images/aptos-logo.jpg",
+                shortDesc: "Aptos phân phối token APT miễn phí cho cộng đồng tham gia staking.",
+                details: `
+                <ul>
+                    <li><strong>Thời gian:</strong> 25/03/2025 - 05/04/2025</li>
+                    <li><strong>Yêu cầu:</strong> Stake token trên Aptos, tham gia Telegram</li>
+                    <li><strong>Phần thưởng:</strong> 100 APT Token mỗi người</li>
+                    <li><strong>Link tham gia:</strong> <a href="https://aptoslabs.com/airdrop">aptoslabs.com/airdrop</a></li>
+                </ul>
+            `,
+                instructions: `
+                <li>Truy cập website Aptos và stake token.</li>
+                <li>Tham gia kênh Telegram của Aptos.</li>
+                <li>Đăng ký nhận Airdrop trên website.</li>
+            `,
+                joinLink: "https://aptoslabs.com/airdrop"
+            },
+            8: {
                 title: "Airdrop Dự án Aptos",
                 date: "April 21, 2025",
                 image: "images/aptos-logo.jpg",
