update giao dien cho mobile

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 				<section>
 					<h3>Social</h3>
 					<ul class="icons alt">
-						<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://x.com/tigerdev68" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a>
 						</li>
 						<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a>
@@ -241,7 +241,7 @@
 				? filteredProjects.map(project => `
                         <div class="slide">
                             <header class="major">
-                                <h2><a href="${project.detailsUrl}">${project.title.replace('Airdrop Dự án ', 'Airdrop ')}<br />Đừng Bỏ Lỡ!</a></h2>
+                                <h2><a href="${project.detailsUrl}">${project.title.replace('Airdrop Dự án ', 'Airdrop ')}<span class="highlight-text">Đừng Bỏ Lỡ!</span></a></h2>
 								<span class="date">${project.date}</span>
                                 <p>${project.shortDesc}</p>
                             </header>
