--- a/project-details.html
+++ b/project-details.html
@@ -152,7 +152,7 @@
                 title: "Airdrop Dự án Recall",
                 date: "April 26, 2025",
                 image: "images/recall/RECALL.png",
-                shortDesc: "Tham gia ngay dự án airdrop Recall cùng Jason nhé!",
+                shortDesc: "Tham gia ngay dự án airdrop Recall cực xịn cùng Jason nhé!",
                 details: `
                         <ul>
                             
