--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 				title: "Airdrop Dự án Recall",
 				date: "April 26, 2025",
 				image: "images/recall/RECALL.png",
-				shortDesc: "Tham gia ngay dự án airdrop Recall cùng Jason nhé!",
+				shortDesc: "Tham gia ngay dự án airdrop Recall cực xịn cùng Jason nhé!",
 				detailsUrl: "project-details.html?id=2"
 			},
 			{
