update infomation founder

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
 		<!-- Intro -->
 		<div id="intro">
-			<h1>Crypto<br />
-				Airdrop</h1>
+			<h1>GROSE<br />
+				Crypto Airdrop</h1>
 			<p>"Chào bạn, mình là Jason!
 
 				Trong thế giới crypto, cơ hội không chỉ đến từ đầu tư mà còn từ những phần thưởng miễn phí – đó chính là
@@ -92,7 +92,7 @@
 		<!-- Footer -->
 		<footer id="footer">
 			<section>
-				<h3>Airdrop cùng Jason</h3>
+				<h3>Airdrop cùng Jason - Founder GroseCrypto</h3>
 				<!-- <form method="post" action="#">
 					<div class="fields">
 						<div class="field">
