--- a/project-details.html
+++ b/project-details.html
@@ -59,7 +59,7 @@
         <!-- Footer -->
         <footer id="footer">
             <section>
-                <h3>Airdrop cùng Jason</h3>
+                <h3>Airdrop cùng Jason - Founder GroseCrypto</h3>
                 <!-- <form method="post" action="#">
                     <div class="fields">
                         <div class="field">
