update logic code

--- a/project-details.html
+++ b/project-details.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!-- <!DOCTYPE HTML>
 <html>
 
 <head>
@@ -316,4 +316,5 @@
     </script>
 </body>
 
-</html>
+</html> -->
+// file này bỏ
