update details project

--- a/projects/boundless.html
+++ b/projects/boundless.html
@@ -1,19 +1,14 @@
 <!DOCTYPE HTML>
 <html>
-
 <head>
     <title>Chi tiết dự án - Airdrop Dự án Boundless</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <meta name="description"
-        content="Tham gia ngay dự án airdrop Boundless, cơ hội vàng để sở hữu token độc quyền từ dự án blockchain đầy tiềm năng!" />
+    <meta name="description" content="Tham gia ngay dự án airdrop Boundless, cơ hội vàng để sở hữu token độc quyền từ dự án blockchain đầy tiềm năng!" />
     <meta name="keywords" content="Crypto Airdrop, Airdrop Dự án Boundless, token miễn phí" />
     <link rel="stylesheet" href="../assets/css/main.css" />
-    <noscript>
-        <link rel="stylesheet" href="../assets/css/noscript.css" />
-    </noscript>
+    <noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
 </head>
-
 <body class="is-preload">
     <!-- Wrapper -->
     <div id="wrapper">
@@ -28,8 +23,9 @@
                 <li class="active"><a href="../index.html">Crypto Airdrop</a></li>
             </ul>
             <ul class="icons">
-                <li><a href="https://x.com/tigerdev68" class="icon brands fa-twitter"><span
-                            class="label">Twitter</span></a></li>
+                <li><a href="https://x.com/tigerdev68" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+                <li><a href="#" class="icon brands fa-telegram"><span class="label">Telegram</span></a></li>
+                <li><a href="#" class="icon brands fa-tiktok"><span class="label">TikTok</span></a></li>
                 <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
                 <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
                 <li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
@@ -42,35 +38,20 @@
                 <header class="major">
                     <span class="date">April 27, 2025</span>
                     <h1>Airdrop Dự án Boundless</h1>
-                    <p>Tham gia ngay dự án airdrop Boundless, cơ hội vàng để sở hữu token độc quyền từ dự án blockchain
-                        đầy tiềm năng!</p>
+                    <p>Tham gia ngay dự án airdrop Boundless, cơ hội vàng để sở hữu token độc quyền từ dự án blockchain đầy tiềm năng!</p>
                 </header>
                 <img src="../images/boundless/boundless.jpg" class="image main" alt="" />
                 <h2>Thông tin chi tiết</h2>
                 <div>
                     <ul>
-                        <li><strong>Yêu cầu:</strong> Tham gia Discord, follow Twitter</li>
-                        <li><strong>Phần thưởng:</strong> Token dự án</li>
-                        <li><strong>Link tham gia:</strong> <a href='https://discord.com/invite/boundlessxyz'>Discord
-                                boundless</a></li>
+                        <li><strong>Yêu cầu:</strong> Tham gia Discord, follow Twitter</li><li><strong>Phần thưởng:</strong> Token dự án</li><li><strong>Link tham gia:</strong> <a href='https://discord.com/invite/boundlessxyz'>Discord boundless</a></li>
                     </ul>
                 </div>
                 <h2>Hướng dẫn tham gia</h2>
-                <ol>
-                    <li>Truy cập link discord của dự án <a href='https://discord.com/invite/boundlessxyz'>Discord
-                            boundless</a></li>
-                        <div style="text-align: center;"><img src="../images/pic01.jpg"
-                                alt="Hướng dẫn Discord Boundless" style="max-width: 100%; height: auto;" />
-                            <p
-                                style="font-style: italic; color: #666; font-size: 0.9em; margin-top: 5px; margin-bottom: 0;">
-                                Chú thích: Ảnh chụp màn hình kênh Discord Boundless</p>
-                        </div>
-                    <li>Hiện tại dự án mới ra discord cho anh em cày role, có thông tin mới mình sẽ update sau</li>
-                </ol>
+                <ol><li>Truy cập link discord của dự án <a href='https://discord.com/invite/boundlessxyz'>Discord boundless</a></li></ol><div style="text-align: center;"><img src="../images/pic01.jpg" alt="Hướng dẫn Discord Boundless" style="max-width: 100%; height: auto;" /><p style="font-style: italic; color: #666; font-size: 0.9em; margin-top: 5px; margin-bottom: 0;">Chú thích: Ảnh chụp màn hình kênh Discord Boundless</p></div><ol start="2"><li>Hiện tại dự án mới ra discord cho anh em cày role, có thông tin mới mình sẽ update sau</li></ol>
                 <ul>------Update------</ul>
                 <ul class="actions special">
-                    <li><a href="https://docs.beboundless.xyz/developers/what" class="button large">Tìm hiểu thêm</a>
-                    </li>
+                    <li><a href="https://docs.beboundless.xyz/developers/what" class="button large">Tìm hiểu thêm</a></li>
                 </ul>
             </article>
         </div>
@@ -84,12 +65,11 @@
                 <section>
                     <h3>Social</h3>
                     <ul class="icons alt">
-                        <li><a href="https://x.com/tigerdev68" class="icon brands alt fa-twitter"><span
-                                    class="label">Twitter</span></a></li>
-                        <li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a>
-                        </li>
-                        <li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a>
-                        </li>
+                        <li><a href="https://x.com/tigerdev68" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+                        <li><a href="#" class="icon brands fa-telegram"><span class="label">Telegram</span></a></li>
+                        <li><a href="#" class="icon brands fa-tiktok"><span class="label">TikTok</span></a></li>
+                        <li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+                        <li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
                         <li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
                     </ul>
                 </section>
@@ -114,5 +94,4 @@
     <script src="../assets/js/util.js"></script>
     <script src="../assets/js/main.js"></script>
 </body>
-
 </html>
