--- a/projects/recall.html
+++ b/projects/recall.html
@@ -24,6 +24,8 @@
             </ul>
             <ul class="icons">
                 <li><a href="https://x.com/tigerdev68" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+                <li><a href="#" class="icon brands fa-telegram"><span class="label">Telegram</span></a></li>
+                <li><a href="#" class="icon brands fa-tiktok"><span class="label">TikTok</span></a></li>
                 <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
                 <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
                 <li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
@@ -46,7 +48,7 @@
                     </ul>
                 </div>
                 <h2>Hướng dẫn tham gia</h2>
-                <ol><li>Truy cập <a href='https://boost.absinthe.network/recall/account'>boost.absinthe.network</a>, nhập ref code: 36fe7ef1</li><li style="list-style-type: none;"><div style="text-align: center;"><img src="../images/recall/screenshot.jpg" alt="Hướng dẫn Galxe Quest" style="max-width: 100%; height: auto;" /><p style="font-style: italic; color: #666; font-size: 0.9em; margin-top: 5px; margin-bottom: 0;">Chú thích: Ảnh chụp màn hình quest Galxe</p></div></li><li>Hoàn thành các Quest Galxe, Zealy bên dưới</li></ol>
+                <ol><li>Truy cập <a href='https://boost.absinthe.network/recall/account'>boost.absinthe.network</a>, nhập ref code: 36fe7ef1</li><li>Hoàn thành các Quest Galxe, Zealy bên dưới</li><li>Tham gia Discord cày Role dự án anh em nhé!</li></ol>
                 <ul>------Update------</ul>
                 <ul class="actions special">
                     <li><a href="https://recall.network/" class="button large">Tìm hiểu thêm</a></li>
@@ -64,6 +66,8 @@
                     <h3>Social</h3>
                     <ul class="icons alt">
                         <li><a href="https://x.com/tigerdev68" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+                        <li><a href="#" class="icon brands fa-telegram"><span class="label">Telegram</span></a></li>
+                        <li><a href="#" class="icon brands fa-tiktok"><span class="label">TikTok</span></a></li>
                         <li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
                         <li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
                         <li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
