--- a/projects/billions.html
+++ b/projects/billions.html
@@ -24,6 +24,8 @@
             </ul>
             <ul class="icons">
                 <li><a href="https://x.com/tigerdev68" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+                <li><a href="#" class="icon brands fa-telegram"><span class="label">Telegram</span></a></li>
+                <li><a href="#" class="icon brands fa-tiktok"><span class="label">TikTok</span></a></li>
                 <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
                 <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
                 <li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
@@ -46,7 +48,7 @@
                     </ul>
                 </div>
                 <h2>Hướng dẫn tham gia</h2>
-                <ol><li>Truy cập <a href='https://signup.billions.network?rc=WROJALHT'>signup.billions.network</a></li><li>Hoàn thành các nhiệm vụ đơn giản</li><li>Truy cập cày role Discord dự án <a href='https://discord.com/invite/billions-ntwk'>Discord Billions</a></li><li>------Update------</li></ol>
+                <ol><li>Truy cập <a href='https://signup.billions.network?rc=WROJALHT'>signup.billions.network</a></li><li>Hoàn thành các nhiệm vụ đơn giản</li><li>Truy cập cày role Discord dự án <a href='https://discord.com/invite/billions-ntwk'>Discord Billions</a></li></ol>
                 <ul>------Update------</ul>
                 <ul class="actions special">
                     <li><a href="https://signup.billions.network?rc=WROJALHT" class="button large">Tìm hiểu thêm</a></li>
@@ -64,6 +66,8 @@
                     <h3>Social</h3>
                     <ul class="icons alt">
                         <li><a href="https://x.com/tigerdev68" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+                        <li><a href="#" class="icon brands fa-telegram"><span class="label">Telegram</span></a></li>
+                        <li><a href="#" class="icon brands fa-tiktok"><span class="label">TikTok</span></a></li>
                         <li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
                         <li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
                         <li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
