--- a/template.html
+++ b/template.html
@@ -24,6 +24,8 @@
             </ul>
             <ul class="icons">
                 <li><a href="https://x.com/tigerdev68" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+                <li><a href="#" class="icon brands fa-telegram"><span class="label">Telegram</span></a></li>
+                <li><a href="#" class="icon brands fa-tiktok"><span class="label">TikTok</span></a></li>
                 <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
                 <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
                 <li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
@@ -64,6 +66,8 @@
                     <h3>Social</h3>
                     <ul class="icons alt">
                         <li><a href="https://x.com/tigerdev68" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+                        <li><a href="#" class="icon brands fa-telegram"><span class="label">Telegram</span></a></li>
+                        <li><a href="#" class="icon brands fa-tiktok"><span class="label">TikTok</span></a></li>
                         <li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
                         <li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
                         <li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
